# knowledge-ingest-pipeline

./: .env.example  .gitignore  README.md  feeds.json  pr_feedback.txt  pyproject.toml
.agent/rules/: common.md
.github/workflows/: rss.yml
knowledge-site/: README.md  package-lock.json  package.json
knowledge-site/app/: globals.css  layout.tsx  page.tsx
knowledge-site/app/[slug]/: page.tsx
knowledge-site/components/: ArticleCard.tsx  Footer.tsx  Header.tsx
knowledge-site/lib/: notion.ts
scripts/: debug_notion.py  debug_query.py  main.py
scripts/debug/: debug_db_access.py  debug_query.py  debug_query_raw.py  debug_query_simple.py  fetch_reviews.py  repro_issue.py
