[project]
name = "knowledge-ingest-pipeline"
version = "0.1.0"
description = "Automated knowledge ingestion pipeline (RSS → summarize → Notion)."
requires-python = ">=3.10"
dependencies = [
  "feedparser",
  "requests",
  "openai",
  "beautifulsoup4>=4.14.3",
  "notion-client>=2.7.0",
]

[dependency-groups]
dev = []
